work sans google font

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3 Arcthitects Webside</title>
     <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+  </head>
+  <body class="work-sans-normal">
     <header>
+        <nav class="navber">
+            <h3 class="brand">G3 Architects</h3>
+
+        </nav>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
-    
-</body>
+  </body>
 </html>
