--- a/index.html
+++ b/index.html
@@ -30,23 +30,55 @@
       <!-- banner section------------------- -->
       <div class="banner">
         <div class="banner-content">
-            <h3 class="banner-title">Brand New Group of Architects</h3>
-            <p class="banner-description text-light-gray ">
-              There are many variations of passages of Lorem Ipsum available, but
-              the majority have suffered alteration in some form, by injected
-              humour, or randomised words which don't look even
-            </p>
-            <button class="btn-primary">Explore More</button>
-    
+          <h3 class="banner-title">Brand New Group of Architects</h3>
+          <p class="banner-description text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
         </div>
-        <img class="banner-image" src="./images/banner.png" alt="">
+        <img class="banner-image" src="./images/banner.png" alt="" />
       </div>
     </header>
+    <!-- ------------------main section stert ------------------->
+    <main class="main-section">
+      <section class="teams display-flex">
+        <div class="teams-image-container">
+          <img
+            src="./images/team1.png"
+            alt="two architects discussing about design"
+          />
+          <img
+            src="./images/team2.png"
+            alt="two architects discussing about design"
+          />
+          <img
+            src="./images/team3.png"
+            alt="two architects discussing about design"
+          />
+          <img
+            src="./images/team4.png"
+            alt="two architects discussing about design"
+          />
+        </div>
 
-
-
-
-    <main></main>
+        <div class="our-features">
+          <h3 class="feature-title">
+            <span id="quick-list" class="text-light-gray">Quick list</span>
+            <span class="of-our">of Our</span>
+            <span class="text-primary">Features</span>
+          </h3>
+          <p class="feature-description text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+    </main>
+    <!-- ---------------main section end ---------------------------->
     <footer></footer>
   </body>
 </html>
