--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     </header>
     <!-- ------------------main section stert ------------------->
     <main class="main-section">
+      <!-- -----teams section start------------ -->
       <section class="teams display-flex">
         <div class="teams-image-container">
           <img
@@ -64,7 +65,7 @@
         </div>
 
         <div class="our-features">
-          <h3 class="feature-title">
+          <h3 class="section-title">
             <span id="quick-list" class="text-light-gray">Quick list</span>
             <span class="of-our">of Our</span>
             <span class="text-primary">Features</span>
@@ -75,6 +76,55 @@
             humour, or randomised words which don't look even
           </p>
           <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+
+      <!-- features will enjoy -->
+      <section></section>
+
+      <!-- ----------------------same facts ----------------->
+      <section class="same-facts">
+        <h3 class="section-title text-black">Some Facts</h3>
+        <p class="text-light-gray fact-discription">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+
+        <div class="facts-container">
+          
+            <div class="fact-card display-flex">
+              <div>
+                <img class="fact-icon" src="./images/icons/ribon.png" alt="" />
+                <h4 class="fact-number">54</h4>
+                <h5 class="fact-name text-light-gray">Awards Winnings</h5>
+  
+              </div>
+  
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img class="fact-icon" src="./images/icons/projects.png" alt="" />
+              <h4 class="fact-number">1458</h4>
+              <h5 class="fact-name">Project Finished</h5>
+  
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img class="fact-icon" src="./images/icons/customers.png" alt="" />
+              <h4 class="fact-number">590</h4>
+              <h5 class="fact-name">Clients Worked</h5>
+  
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img class="fact-icon" src="./images/icons/email.png" alt="" />
+              <h4 class="fact-number">22578</h4>
+              <h5 class="fact-name">Email Send</h5>
+  
+            </div>
+          </div>
         </div>
       </section>
     </main>
