--- a/index.html
+++ b/index.html
@@ -79,9 +79,6 @@
         </div>
       </section>
 
-      <!-- features will enjoy -->
-      <section></section>
-
       <!-- ----------------------same facts ----------------->
       <section class="same-facts">
         <h3 class="section-title text-black">Some Facts</h3>
@@ -91,30 +88,29 @@
         </p>
 
         <div class="facts-container">
-          
-            <div class="fact-card display-flex">
-              <div>
-                <img class="fact-icon" src="./images/icons/ribon.png" alt="" />
-                <h4 class="fact-number">54</h4>
-                <h5 class="fact-name text-light-gray">Awards Winnings</h5>
-  
-              </div>
-  
+          <div class="fact-card display-flex">
+            <div>
+              <img class="fact-icon" src="./images/icons/ribon.png" alt="" />
+              <h4 class="fact-number">54</h4>
+              <h5 class="fact-name text-light-gray">Awards Winnings</h5>
+            </div>
           </div>
           <div class="fact-card display-flex">
             <div>
               <img class="fact-icon" src="./images/icons/projects.png" alt="" />
               <h4 class="fact-number">1458</h4>
               <h5 class="fact-name">Project Finished</h5>
-  
             </div>
           </div>
           <div class="fact-card display-flex">
             <div>
-              <img class="fact-icon" src="./images/icons/customers.png" alt="" />
+              <img
+                class="fact-icon"
+                src="./images/icons/customers.png"
+                alt=""
+              />
               <h4 class="fact-number">590</h4>
               <h5 class="fact-name">Clients Worked</h5>
-  
             </div>
           </div>
           <div class="fact-card display-flex">
@@ -122,13 +118,30 @@
               <img class="fact-icon" src="./images/icons/email.png" alt="" />
               <h4 class="fact-number">22578</h4>
               <h5 class="fact-name">Email Send</h5>
-  
             </div>
           </div>
         </div>
       </section>
+
+      <section class="our-sponsors">
+        <div class="sponsor-info">
+          <h3 class="section-title">Our Sponspors</h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponser-company">
+          <img src="./images/sponsors/spotify.png" alt="" />
+          <img src="./images/sponsors/amazon.png" alt="" />
+          <img src="./images/sponsors/google.png" alt="" />
+          <img src="./images/sponsors/telerama.png" alt="" />
+          <img src="./images/sponsors/figma.png" alt="" />
+        </div>
+      </section>
     </main>
     <!-- ---------------main section end ---------------------------->
+
     <footer></footer>
   </body>
 </html>
