added footer section

--- a/index.html
+++ b/index.html
@@ -139,9 +139,27 @@
           <img src="./images/sponsors/figma.png" alt="" />
         </div>
       </section>
+
+
+      <footer>
+        <section class="footer-section">
+          <p class="footer-description">All rights reserved copyright@2023 startup landing page design
+          </p>
+  
+        </section>
+  
+      </footer>
+  
     </main>
     <!-- ---------------main section end ---------------------------->
 
-    <footer></footer>
+    <!-- <footer>
+      <section class="footer-section">
+        <p class="footer-description">All rights reserved copyright@2023 startup landing page design
+        </p>
+
+      </section>
+
+    </footer> -->
   </body>
 </html>
